move to variables of repo

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
-DB_CNN=mongodb+srv://swa91:SAL68wil20@cluster0.yjkyyql.mongodb.net/hospitaldb
-JWT_SECRET=EuFYWmV:^pL.7$5xNzQtd
+DB_CNN=
+JWT_SECRET=
 
-GOOGLE_ID=428958341715-vd5v3i33lfi4uq6mb2kjvhaerd6omt0h.apps.googleusercontent.com
-GOOGLE_SECRET=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
+GOOGLE_ID=
+GOOGLE_SECRET=
